@@ -1,5 +1,7 @@
 2004-10-04  Ulrich Drepper  <drepper@redhat.com>
 
+	* assert/assert.h: Give up on using __builtin_expect.
+
 	* elf/rtld.c (dl_main): Only skip => output in ldd mode if both
 	strings are identical.
 
